--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <body>
     <div class="question-section" id="question-main">
     </div>
-    <a href="/results.html">See Rankings</a>
+    <a href="/dpg-fun-survey/results">See Rankings</a>
 </body>
 </html>
