--- a/results.html
+++ b/results.html
@@ -15,7 +15,7 @@
         <table id="answer"></table>
     </div>
     <!-- <canvas id="charts"></canvas> -->
-    <a href="/">Back to Voting</a>
+    <a href="/dpg-fun-survey">Back to Voting</a>
 
 </body>
 </html>
