--- a/liveResults.html
+++ b/liveResults.html
@@ -11,10 +11,12 @@
 </head>
 <body>
     <div class="live-display">
-    <h2>Live Rankings</h2>
+    <h2>Live Vote Results</h2>
         <div id="live"></div>
     </div>
     <!-- <canvas id="charts"></canvas> -->
+    <br>
+    <h2>Want to vote? Use the QR code and let your opinion be known</h2>
 
 </body>
 </html>
